fit main title on single line
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@153 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -17,9 +17,11 @@
 \begin{fullwidth}
 \sffamily
 {
-  \huge
+  \Large
+  \fontsize{20}{24}\selectfont 
   \smallcaps
   \@title
+  %\@title
 }\\
 \vspace{4\baselineskip}
 {\Large 
