--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -2,12 +2,14 @@ Three benchmark simplified models \cite{Carpenter:2013xra,Berlin:2014cfa}
 are recommended for Higgs+MET searches:
 \begin{itemize}
 	\item A model where a leptophobic vector mediator ($Z_B^\prime$) is exchanged in the $s-$channel, 
-	radiates a Higgs or a $Z$ boson and decays into two DM particles (Fig.~\ref{fig:feyn_prod_monoH} (a));
-	\item A model where a scalar mediator $S$ couples to the SM only 
+	radiates a Higgs boson and decays into two DM particles (Fig.~\ref{fig:feyn_prod_monoH} (a));
+    \item A model where a scalar mediator $S$ couples to the SM only 
 	through the SM Higgs and decays to two DM particles (Fig.~\ref{fig:feyn_prod_monoH_S});
 	\item A model where a vector $Z^\prime$ is produced resonantly and decays into a Higgs boson
 	plus an intermediate heavy pseudoscalar particle $A^0$, in turn decaying into two DM particles (Fig. \ref{fig:feyn_prod_monoH} (b)). 
 \end{itemize}
+
+\todo{AB: remove the extra Z in the diagram for the MonoHZprimeqq}
 
 \begin{figure}[!h!tpd]
 	\centering
@@ -187,7 +189,7 @@ The first term of this equation gives rise to a term that is equivalent to the
 radiation of a jet (or another EW gauge boson) in the initial state. 
 The second term describes the interaction between the $Z^\prime$ and the SM Higgs boson,
 via the coupling $g_{h Z^\prime Z^\prime} = \frac{m_{Z^\prime}2 sin\theta}{v_B}$, where
-$sin\theta$ is the mixing angle between the Higgs and the $Z^\prime$ and $v_B$ is the
+$sin\theta$ is the mixing angle between the SM Higgs and the baryonic Higgs $h_B$, and $v_B$ is the
 Baryonic Higgs vev. 
 
 %TODO: 
@@ -202,7 +204,7 @@ The model is described by six parameters:
 	\item mass of dark matter, $m_{DM}$
 	\item coupling of $Z^\prime$ mediator to dark matter, \gdm
 	\item coupling of the mediator to quarks, $g_q$
-	\item mixing angle between baryonic Higgs and SM-like Higgs boson, $\sin\theta$
+	\item mixing angle between baryonic Higgs $h_B$ and the SM-like Higgs boson, $\sin\theta$
 	\item coupling of the mediator to SM-like Higgs boson, $g_{hZ^\prime Z^\prime}$
 \end{enumerate}
 The width of the $Z^\prime$ mediator is calculated using all possible decays to SM particles (quarks) and to pairs of DM particles if kinematically allowed.
@@ -708,7 +710,6 @@ namely values of $M_{Z^\prime}=600, 800, 1000, 1200, 1400$~GeV.  This signal pro
   	\caption{Kinematic distributions of $Z^\prime \to A^0h$ exclusive production, $Z^\prime \to Zh$ exclusive production and $Z^\prime$ inclusive production for $M_{Z^\prime}=1000$~GeV and $M_{A^0}=300$~GeV}
   	\label{fig:DMH_zpincl}
 \end{figure}
-
 
   
  \subsection{Model implementation}
