--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -48,13 +48,12 @@ As described in Section~\ref{sec:monojet_scalar}, a model with a scalar/pseudosc
 
 \subsection{Parameter scan}
 
-As discussed in Sec.~\ref{sec:monojet_scalar}, the MFV assumption for spin-$0$ mediators leads to quark mass dependent Yukawa couplings, and therefore dominant couplings to top quarks. This motivates dedicated DM+$t\bar{t}$ searches. 
-The benchmark chosen for these searches follows the assumptions mentioned in the previous Section: we consider 
-a Dirac fermion DM particle, universal couplings to quarks, and minimum mediator width. 
+As discussed in Sec.~\ref{sec:scalar}, the MFV and universal coupling assumptions for spin-$0$ mediators leads to quark mass dependent Yukawa couplings and therefore dominant couplings to top quarks.Therefore DM+$t\bar{t}$ searches are strongly physically motivated and it is important to establish benchmarks for collider searches following the assumptions described in Sec.~\ref{sec:scalar}, in particular a Dirac fermion DM particle, universal couplings and minimum width, $\Gamma_{\phi,a}$.
+
+%The benchmark chosen for these searches follows the assumptions mentioned in the previous Section: we consider 
+%a Dirac fermion DM particle, universal couplings to quarks, and minimum mediator width. 
  
 The benchmark points scanning the model parameters have been selected to ensure that the kinematic features of the parameter space are sufficiently represented. Detailed studies were performed to identify points in the \mdm, $m_{\phi,a}$, $\gdm$, $\gq$ (and $\Gamma_{\phi,a}$) parameter space that differ significantly from each other in terms of expected detector acceptance. Because missing transverse momentum is the key observable for searches, the mediator $p_{T}$ spectra is taken to represent the main kinematics of a model. Another consideration in determining the set of benchmarks is to focus on the phase space where we expect the searches to be sensitive during the 2015 LHC run. Based on a projected integrated luminosity of $30\,{\rm fb}^{-1}$ expected for 2015, we disregard model points with a cross section times branching ratio smaller than $0.1\,{\rm fb}$.
-
-\subsection{Parameter scan}
 
 The kinematics is most dependent on the masses \mdm and $m_{\phi,a}$. Figure~\ref{fig:scanPhi} 
 and~\ref{fig:scanPhiPseudo} show typical dependencies for scalar and pseudoscalar couplings respectively.
