thinking better thoughts
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@160 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -305,7 +305,7 @@ bounds one obtains from X+MET searches depends strongly on the width
 of the mediator, as is visible in Figs.~5 and 6 of
 Ref.~\cite{Pappuci:2014}, except in the heavy mediator limit ($M_{\phi} \approx 2$\,TeV). A scan over the width was not available for this report; thus we recommend scanning a range of possible widths as discussed in a more-limited way for the $s$-channel mono-jet, spanning from the minimal width to a value approaching the particle limit (for example, $\Gamma \approx M_{\phi}/3$ in Ref.~\cite{Pappuci:2014}).
 
-\newhthought{Implementation}
+\newthought{Implementation}
 
 The MadGraph implementation of the Ref.~\cite{Pappuci:2014} is
 available from the Forum repository \todo{cite}, following the
